--- a/css/style.css
+++ b/css/style.css
@@ -106,9 +106,11 @@ h1 {
 }
 
 #myBtnContainer {
-  width: 300px;
-  border: 15px solid green;
-  padding: 50px;
-  margin: 20px;
 
 }
+
+.navbar {
+  width: 1100px;
+  border: 5px solid beige;
+  padding: 50px;
+  margin: 20px;
